<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/turnTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_x"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            style="@style/row">

            <Button
                android:id="@+id/a1"
                style="@style/column"
                android:contentDescription="@string/a1" />
            <View
                style="@style/verticalLine"/>

            <Button
                android:id="@+id/a2"
                style="@style/column"
                android:contentDescription="@string/a2" />
            <View
                style="@style/verticalLine"/>

            <Button
                android:id="@+id/a3"
                style="@style/column"
                android:contentDescription="@string/a3"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <View
            style="@style/horizontalLine"/>

        <LinearLayout
            style="@style/row">

            <Button
                android:id="@+id/b1"
                style="@style/column"
                android:contentDescription="@string/b1" />
            <View
                style="@style/verticalLine"/>

            <Button
                android:id="@+id/b2"
                style="@style/column"
                android:contentDescription="@string/b2" />
            <View
                style="@style/verticalLine"/>

            <Button
                android:id="@+id/b3"
                style="@style/column"
                android:contentDescription="@string/b3" />

        </LinearLayout>

        <View
            style="@style/horizontalLine"/>

        <LinearLayout
            style="@style/row">

            <Button
                android:id="@+id/c1"
                style="@style/column"
                android:contentDescription="@string/c1" />
            <View
                style="@style/verticalLine"/>

            <Button
                android:id="@+id/c2"
                style="@style/column"
                android:contentDescription="@string/c2" />
            <View
                style="@style/verticalLine"/>

            <Button
                android:id="@+id/c3"
                style="@style/column"
                android:contentDescription="@string/c3" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>